@@ -888,6 +888,21 @@ TEST(Group_toJSON)
     CHECK(str.length() > 0);
 }
 
+TEST(Group_toString)
+{
+    Group g;
+    TestTableGroup::Ref table = g.get_table<TestTableGroup>("test");
+
+    table->add("jeff",     1, true, Wed);
+    table->add("jim",      1, true, Wed);
+    std::ostringstream ss;
+    ss.sync_with_stdio(false); // for performance
+    g.to_string(ss);
+    const std::string str = ss.str();
+    CHECK(str.length() > 0);
+    CHECK_EQUAL("     tables     rows  \n   0 test       2     \n", str.c_str());
+}
+
 TEST(Group_Index_String)
 {
     Group toMem;
